[metadata]
name = stacture
version = attr: stacture.__version__
author = Fabian Schindler
author_email = fabian.schindler@eox.at
license = MIT
description =
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
stacture = *.json

[mypy]
exclude = (.tox|build|dist|.eggs|docs/conf.py|.venv|__init__.py|tests)
ignore_missing_imports = True

[flake8]
max-line-length = 90
exclude = .venv, build, tests
ignore = W503,E203
